project(
  'pb-clang-format',
  version : '0.0.1',
  license : 'BSD-3',
  meson_version : '>= 0.53.0')

#if (not meson.is_subproject())
#  pbqc_clang_formatter = find_program('tools/check-formatting')
#  subdir('tests')
#endif

###################
# dependency info #
###################

#pbcf_dep = declare_dependency(
#  version : meson.project_version())
